Bug #230577 --> mail address autocompletion chooses three addresses from address book entries of a certain form.

Remove the header parser's code that breaks names based on spaces so it won't break:

Scott, John Smith, Peter

r=neil, sr=bienvenu